[gd_scene load_steps=42 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Netherplace_Looping.ogg" type="AudioStream" id=2]
[ext_resource path="res://rocks_1.png" type="Texture" id=3]
[ext_resource path="res://exit.png" type="Texture" id=4]
[ext_resource path="res://exit_pushed.png" type="Texture" id=5]
[ext_resource path="res://clockgame_settings.png" type="Texture" id=6]
[ext_resource path="res://clock frame.png" type="Texture" id=7]
[ext_resource path="res://big hand.png" type="Texture" id=8]
[ext_resource path="res://little hand.png" type="Texture" id=9]
[ext_resource path="res://clockgame_settings_pressed.png" type="Texture" id=10]
[ext_resource path="res://outer rune.png" type="Texture" id=11]
[ext_resource path="res://inner rune.png" type="Texture" id=12]
[ext_resource path="res://inner seconds.png" type="Texture" id=13]
[ext_resource path="res://Mulish-Regular.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://confirm_correct.png" type="Texture" id=15]
[ext_resource path="res://confirm_pressed.png" type="Texture" id=16]
[ext_resource path="res://confirm_wrong.png" type="Texture" id=17]
[ext_resource path="res://confirm.png" type="Texture" id=18]
[ext_resource path="res://clockgame_correct.ogg" type="AudioStream" id=19]
[ext_resource path="res://clockgame_wrong.ogg" type="AudioStream" id=20]
[ext_resource path="res://Settings.tscn" type="PackedScene" id=21]
[ext_resource path="res://clockgame_hint_pressed.png" type="Texture" id=22]
[ext_resource path="res://clockgame_hint.png" type="Texture" id=23]
[ext_resource path="res://clockgame_star.png" type="Texture" id=24]
[ext_resource path="res://rocks_2.png" type="Texture" id=25]
[ext_resource path="res://clouds_1.png" type="Texture" id=26]
[ext_resource path="res://sky.png" type="Texture" id=27]
[ext_resource path="res://clouds_2.png" type="Texture" id=28]

[sub_resource type="Animation" id=1]
resource_name = "Parallax"
length = 120.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Background/rocks_1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 120 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1920, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Parallax"
length = 90.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Background/rocks_2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 90 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1920, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Parallax"
length = 160.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Background/clouds_1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 160 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1920, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Parallax"
length = 50.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Background/clouds_2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 50 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1920, 0 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.197266, 0.197266, 0.197266, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.196078, 0.196078, 0.196078, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 60.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("outer rune:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 60 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("inner_rune:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 60 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Submit:normal")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1.86607, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 18 ) ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Submit:normal")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1.86607, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 18 ) ]
}

[sub_resource type="DynamicFont" id=10]
size = 120
font_data = ExtResource( 14 )

[sub_resource type="Curve" id=11]
max_value = 5.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 500, 0 )
initial_velocity = 1000.0
initial_velocity_random = 0.25
angular_velocity = 115.81
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 12 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="AudioStreamPlayerCorrect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[node name="AudioStreamPlayerWrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="AudioStreamPlayerBG" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -14.0

[node name="APBG_rocks_1" type="AnimationPlayer" parent="."]
anims/Parallax = SubResource( 1 )

[node name="APBG_rocks_2" type="AnimationPlayer" parent="."]
anims/Parallax = SubResource( 2 )

[node name="APBG_clouds_1" type="AnimationPlayer" parent="."]
anims/Parallax = SubResource( 3 )

[node name="APBG_clouds_2" type="AnimationPlayer" parent="."]
anims/Parallax = SubResource( 4 )

[node name="APBG" type="AnimationPlayer" parent="."]
anims/Day = SubResource( 5 )
anims/Night = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Clock = SubResource( 7 )

[node name="APClock" type="AnimationPlayer" parent="."]

[node name="APSubmit" type="AnimationPlayer" parent="."]
anims/Correct = SubResource( 8 )
anims/Wrong = SubResource( 9 )

[node name="APHint" type="AnimationPlayer" parent="."]

[node name="Background" type="Node2D" parent="."]
scale = Vector2( 1.422, 1.422 )

[node name="sky" type="Sprite" parent="Background"]
texture = ExtResource( 27 )
centered = false

[node name="clouds_1" type="TextureRect" parent="Background"]
margin_right = 2640.0
margin_bottom = 1080.0
texture = ExtResource( 26 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rocks_1" type="TextureRect" parent="Background"]
margin_right = 2640.0
margin_bottom = 1080.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clouds_2" type="TextureRect" parent="Background"]
margin_right = 2640.0
margin_bottom = 1080.0
texture = ExtResource( 28 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rocks_2" type="TextureRect" parent="Background"]
margin_right = 2640.0
margin_bottom = 1080.0
texture = ExtResource( 25 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="TouchScreenButton" parent="."]
position = Vector2( 610.293, 171.649 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 6 )
pressed = ExtResource( 10 )
action = "ui_set"

[node name="ExitButton" type="TouchScreenButton" parent="."]
position = Vector2( 27.3936, 175.638 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 4 )
pressed = ExtResource( 5 )
action = "ui_quit"

[node name="clock frame" type="Sprite" parent="."]
position = Vector2( 360.394, 569.638 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="little hand" type="Sprite" parent="clock frame"]
position = Vector2( -6.10352e-05, 0 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="big hand" type="Sprite" parent="clock frame"]
position = Vector2( -6.10352e-05, 0 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 8 )

[node name="outer rune" type="Sprite" parent="."]
position = Vector2( 360.394, 569.638 )
rotation = -5.29882
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 11 )

[node name="inner_rune" type="Sprite" parent="."]
position = Vector2( 360.394, 569.638 )
rotation = 5.29882
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 12 )

[node name="inner_seconds" type="Sprite" parent="."]
visible = false
position = Vector2( 360.394, 569.638 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 13 )

[node name="MinuteSlider" type="VSlider" parent="."]
margin_left = 630.0
margin_top = 800.0
margin_right = 680.0
margin_bottom = 1400.0
max_value = 59.0
tick_count = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HourSlider" type="VSlider" parent="."]
margin_left = 40.0
margin_top = 800.0
margin_right = 90.0
margin_bottom = 1400.0
max_value = 23.0
tick_count = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 198.526
margin_top = 896.374
margin_right = 514.526
margin_bottom = 1047.37
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeEst" type="Label" parent="CenterContainer"]
margin_right = 316.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 0.866667, 0.643137, 1 )
custom_colors/font_outline_modulate = Color( 0.894118, 0.698039, 0.364706, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "00:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fireworks" type="Particles2D" parent="."]
position = Vector2( 359.064, 1146.96 )
scale = Vector2( 0.2, 0.2 )
emitting = false
amount = 40
lifetime = 3.0
one_shot = true
speed_scale = 3.0
explosiveness = 0.7
randomness = 0.56
visibility_rect = Rect2( -500, -250, 1000, 500 )
process_material = SubResource( 13 )
texture = ExtResource( 24 )

[node name="Submit" type="TouchScreenButton" parent="."]
position = Vector2( 225.286, 1079.4 )
scale = Vector2( 0.647817, 0.808759 )
normal = ExtResource( 18 )
pressed = ExtResource( 16 )

[node name="Settings" parent="." instance=ExtResource( 21 )]
visible = false
position = Vector2( 28.3548, 243.821 )

[node name="HintButton" type="TouchScreenButton" parent="."]
position = Vector2( 310.671, 1292.55 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 23 )
pressed = ExtResource( 22 )
action = "ui_hint"

[connection signal="animation_finished" from="APClock" to="." method="_on_APClock_animation_finished"]
[connection signal="animation_finished" from="APHint" to="." method="_on_APHint_animation_finished"]
[connection signal="value_changed" from="MinuteSlider" to="." method="_on_MinuteSlider_value_changed"]
[connection signal="value_changed" from="HourSlider" to="." method="_on_HourSlider_value_changed"]
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
[connection signal="settings_loaded" from="Settings" to="." method="_on_Settings_settings_loaded"]
